--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 ggez = "0.9.3"
 olindba-chess = { git = "https://github.com/INDA23PlusPlus/olindba-chess", version = "0.1.0" }
+chess-network-protocol = { git = "https://github.com/INDA23PlusPlus/chess-network-protocol" }
